fixing of color contrast in .intro

--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,8 @@ header {
   font-weight: 800;
   font-size: 34px;
   text-align: center;
-  background-color: #8afcd698;
-  color: #fcd502;
+  background-color: #043626;
+  color: gold;
   -webkit-text-stroke: 2px #1e5dbc;
   padding: 20px 5px;
 }
